# finapp

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
app/: main.py
app/api/: router.py
app/core/: config.py  logging.py
app/db/: admin.py  timeseries.py
app/mcp/: server.py
app/models/: admin.py
app/repositories/: admin_auth_repo.py  admin_ops_repo.py  chat_memory_repo.py  portfolio_repo.py
app/schemas/: admin.py  admin_alerts.py  admin_auth.py  admin_logs.py  admin_query.py  alert_daemon.py  alphavantage.py  analysis.py  candle_image.py  chat.py  common.py  integration.py  news.py  portfolio.py  recommendation.py  runtime.py  scan.py  snapshot.py  symbol.py
app/services/: activity_log.py  admin_auth.py  admin_tools.py  alert_daemon.py  analytics.py  (+10 more)
config/: mcp.stocks.json  prompt_shortcuts.json  settings.yaml
docs/: AGENT_WORKFLOW.md  ALERT_PLAN.md  ALPHAVANTAGE_MCP.md  API.md  ARCHITECTURE.md  CANDLE_IMAGE_API_DRAFT.md  CHART_IMG_V1_V2_CURL.md  DATA_MODEL.md  MCP.md  PROMPTS.md  README.md  RUNBOOK.md  SCAN_THE_MARKET.md  SERPAPI_TESTING.md  TWILIO_SMS_PLAN.md
frontend/: streamlit_app.py
scripts/: bootstrap.sh  ingest_prices.py  run_alert_cycle.py  run_alert_daemon.py  seed_alerts_lmedinelli.py  seed_demo_data.py  test_chart_img_v1_v2_curl.sh  test_serpapi.py
tests/: conftest.py
(+31 files in other folders)
