[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-recommender"
version = "0.2.0"
description = "AI-ready financial recommendation and analytics platform for stocks and crypto"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Financial Recommender Team" }]
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.35.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "sqlalchemy>=2.0.43",
  "duckdb>=1.4.0",
  "pandas>=2.3.0",
  "numpy>=2.2.0",
  "yfinance>=0.2.65",
  "httpx>=0.28.1",
  "streamlit>=1.49.0",
  "plotly>=6.3.0",
  "mcp>=1.13.1",
  "openai>=1.99.0",
  "python-dotenv>=1.1.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-cov>=6.2.0",
  "ruff>=0.12.0",
  "mypy>=1.17.0",
  "pandas-stubs>=2.3.0.250703",
  "types-requests>=2.32.4.20250611",
  "pre-commit>=4.2.0"
]

[tool.setuptools]
package-dir = { "" = "." }

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["data"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
plugins = []
exclude = ["^data/"]
